# document-ready

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
src/: error.rs  lib.rs
