[package]
name = "document-ready"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chooxide/document-ready"
documentation = "https://docs.rs/document-ready"
description = "Document ready listener for browsers"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
failure = "0.1.2"
wasm-bindgen = "0.2.23"
futures-preview = "0.3.0-alpha.7"

[dependencies.web-sys]
version = "0.3.0"
features = [
  "Document",
  "EventTarget",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.23"
