[package]
name = "document-ready"
version = "1.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/document-ready"
documentation = "https://docs.rs/document-ready"
description = "Document ready listener for browsers"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>", "Nick Fitzgerald" ]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-channel = "0.3.1"
futures-timer = "3.0.1"
gloo-events = "0.1.1"
wasm-bindgen = "0.2.58"

[dependencies.web-sys]
version = "0.3.35"
features = [
  "Document",
  "EventTarget",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.8"
